# expense-tracker

expense-tracker-backend/: .gitignore  docker-compose.yaml  main.py  pyproject.toml  seed.py
expense-tracker-backend/api/: v1.py
expense-tracker-backend/lib/database/: db.py
expense-tracker-backend/lib/schemas/: schema.py
expense-tracker-backend/models/: expense.py  user.py
expense-tracker-backend/repositories/: user_repository.py
expense-tracker-backend/routers/: user.py
expense-tracker-frontend/: .prettierrc  index.html  package.json  pnpm-lock.yaml
expense-tracker-frontend/src/: app.jsx  index.jsx
expense-tracker-frontend/src/components/: navbar.jsx
